<resources>
    <string name="app_name">简易白板</string>
    <string name="clean">清空</string>
    <string name="set_color">颜色</string>
    <string name="set_size">粗细</string>
    <string name="confirm">确认</string>
    <string name="write_mode">书写</string>
    <string name="erase_mode">擦除</string>
    <string name="select_mode">选择</string>
    <string name="insert_img">插入图片</string>
    <string name="multi_write">多指书写</string>
</resources>