<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.robert.whiteboard_plus.whiteboard.CacheWhiteBoard
        android:id="@+id/cache_whiteboard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.robert.whiteboard_plus.whiteboard.RuntimeWhiteBoard
        android:id="@+id/runtime_whiteboard"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_gravity="bottom"
        android:padding="3dp"
        android:layout_width="wrap_content"
        android:layout_height="65dp">

        <androidx.appcompat.widget.AppCompatImageButton

            android:id="@+id/write_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_selector"
            android:src="@drawable/ic_pen"
            android:text="@string/write_mode" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/erase_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_selector"
            android:src="@drawable/ic_erase"
            android:text="@string/erase_mode" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/select_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_selector"
            android:src="@drawable/ic_cursor"
            android:text="@string/select_mode" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/clear_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_selector"
            android:padding="10px"
            android:src="@drawable/ic_broom"
            android:text="@string/clean" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/insert_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_selector"
            android:padding="10px"
            android:src="@drawable/ic_insert"
            android:text="@string/insert_img" />

    </LinearLayout>
</FrameLayout>