<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_style"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Switch
            android:id="@+id/multi_write_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchPadding="20dp"
            android:text="@string/multi_write" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100px"
            android:text="@string/set_size"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100px"
            android:text="@string/set_color"
            android:layout_height="wrap_content" />

        <com.github.danielnilsson9.colorpickerview.view.ColorPickerView
            android:id="@+id/color_picker_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>